# healthcare-data-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
dags/: healthcare_data_pipeline_dag.py
data/sample/bronze/: appointments.json  claims.json  patients.json
docs/: architecture.md  deployment.md  runbook.md
infrastructure/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: run_demo_pipeline.ps1  run_integrity_console.ps1  run_local_checks.ps1
src/healthcare_data_pipeline/: __init__.py  config.py  dashboard.py  demo_pipeline.py  governance.py  io_utils.py  models.py  orchestration.py
src/healthcare_data_pipeline/jobs/: __init__.py  bronze_ingestion.py  gold_marts.py  quality_checks.py  silver_transform.py
tests/: test_bronze_ingestion.py  test_config.py  test_dashboard.py  test_dashboard_loader.py  test_demo_pipeline.py  test_gold_marts.py  test_governance.py  test_orchestration.py  test_quality_checks.py  test_silver_transform.py
